**** Run Sidekiq with Content Tagger
*** Router improvements
**** Enable specifying the header timeout for the router
*** Bundler/Gem package improvements
**** Remove the .ruby-version files, as this causes reproducibility issues
*** Data management improvements
**** Refactor the govuk-puppet data source
**** Add functionality to generate data directories with indexes
** August
*** Update Guix release_8 -> release_9
*** Improve support for Whitehall attachments
** July
*** Display NGinx logs through Tailon in the development system
*** Create per-service NGinx acccess.log files
*** Improve Rails app database support
*** Plek support improvements
*** Elasticsearch connection support
** June
*** Update Guix release_7 -> release_8
*** Add support for using Tailon in the development system
*** New packages
 - smokey
*** New services
 - smokey
** May
*** Update Guix
 - release_5 -> release_6 -> release 7
*** Removed services
 - contacts-frontend
 - specialist-frontend
 - multipage-frontend
 - content-api
*** Asset manager service improvements
 - Add a dummy govuk_clamscan script
 - Add support for delayed jobs
** April
*** Update Guix release_4 -> release_5
*** Add govuk-refresh
*** Start automatically updating packages
** March
*** Upgrade Guix release_3 -> release_4
*** Patch rubygems to avoid reproducibility issues
*** govuk-system added
*** govuk-data added
*** New packages
 - collections-publisher
 - contacts-admin
 - local-links-manager
 - manuals-publisher
 - policy-publisher
 - service-manual-publisher
 - short-url-manager
 - travel-advice-publisher
 - authenticating-proxy
 - bouncer
 - calculators
 - calendars
 - collections
 - contacts-frontend
 - design-principles
 - email-alert-frontend
 - email-alert-api
 - email-alert-service
 - finder-frontend
 - imminence
 - licence-finder
 - manuals-frontend
 - multipage-frontend
 - service-manual-frontend
 - search-admin
 - smart-answers
 - support
 - release
 - transition
 - asset-manager
 - hmrc-manuals-api