@@ -46,6 +46,7 @@
  (gds services utils databases mysql)
  (gds services utils databases mongodb)
  (gds services utils databases postgresql)
+ (gds services utils databases elasticsearch)
  (gds systems govuk development)
  (gds data data-source)
  (gds data data-extract)
@@ -162,9 +163,10 @@
    (find
     (or
      (assoc-ref
-      `(("postgresql" . ,postgresql-connection-config?)
-        ("mongo"      . ,mongodb-connection-config?)
-        ("mysql"      . ,mysql-connection-config?))
+      `(("postgresql"    . ,postgresql-connection-config?)
+        ("mongo"         . ,mongodb-connection-config?)
+        ("mysql"         . ,mysql-connection-config?)
+        ("elasticsearch" . ,elasticsearch-connection-config?))
       (data-extract-database extract))
      (error "Unrecognised database type ~A" (data-extract-database extract)))
     (service-parameters service))
@@ -219,8 +221,11 @@
                  #t " - ~A extract from ~A into the ~A database for"
                  database
                  (date->string datetime "~d/~m/~Y")
-                 (database-connection-config->database-name
-                  database-connection-config))
+                 (match database
+                   ("elasticsearch" "elasticsearch")
+                   (else
+                    (database-connection-config->database-name
+                     database-connection-config))))
                 (if (eq? 1 (length services))
                     (simple-format #t " the ~A service\n"
                                    (service-type-name (first services)))
@@ -242,10 +247,13 @@
            (lambda (database-connection-config)
              (match data-extract
                (($ <data-extract> file datetime database services)
-                (simple-format #t "Importing extract from ~A in to ~A\n"
-                               (date->string datetime "~d/~m/~Y")
-                               (database-connection-config->database-name
-                                database-connection-config))))
+                (simple-format
+                 #t "Importing extract from ~A in to ~A\n"
+                 (date->string datetime "~d/~m/~Y")
+                 (match database
+                   ("elasticsearch" "elasticsearch")
+                   (else (database-connection-config->database-name
+                          database-connection-config))))))
              (display "\n")
              (load-extract data-extract database-connection-config))
            database-connection-configs)))
