@@ -14,6 +14,7 @@
 *** Data management improvements
 **** Refactor the govuk-puppet data source
 **** Add functionality to generate data directories with indexes
+**** Add initial support for Elasticsearch
 ** August
 *** Update Guix release_8 -> release_9
 *** Improve support for Whitehall attachments
